--- a/Founders D&G/Base.lproj/LaunchScreen.storyboard
+++ b/Founders D&G/Base.lproj/LaunchScreen.storyboard
@@ -17,35 +17,34 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Developed by António Ramadas" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xKK-81-2yP">
-                                <rect key="frame" x="65" y="348" width="245" height="21"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="f2-logo" translatesAutoresizingMaskIntoConstraints="NO" id="J9j-tk-Km2">
+                                <rect key="frame" x="67" y="213" width="241" height="128"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="21" id="xXs-2h-ibW"/>
+                                    <constraint firstAttribute="height" constant="128" id="hH0-Ha-Kxz"/>
                                 </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Developed by António Ramadas" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xKK-81-2yP">
+                                <rect key="frame" x="65" y="356" width="245" height="41"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="f2-logo" translatesAutoresizingMaskIntoConstraints="NO" id="J9j-tk-Km2">
-                                <rect key="frame" x="67" y="194" width="241" height="128"/>
-                            </imageView>
                         </subviews>
                         <color key="backgroundColor" red="0.89411764709999997" green="0.89411764709999997" blue="0.89411764709999997" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstItem="J9j-tk-Km2" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="174" id="Kxw-rV-Kv1"/>
-                            <constraint firstItem="xKK-81-2yP" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="Sju-g3-r5T"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="xKK-81-2yP" secondAttribute="bottom" constant="298" id="c9B-TO-yIg"/>
-                            <constraint firstItem="xKK-81-2yP" firstAttribute="top" secondItem="J9j-tk-Km2" secondAttribute="bottom" constant="26" id="gK5-T2-q2w"/>
-                            <constraint firstItem="J9j-tk-Km2" firstAttribute="leading" secondItem="xKK-81-2yP" secondAttribute="leading" constant="2" id="q28-Ek-NaK"/>
-                            <constraint firstItem="J9j-tk-Km2" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="xQs-Xg-IwD"/>
-                            <constraint firstItem="J9j-tk-Km2" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="67" id="zDA-0f-Mk9"/>
+                            <constraint firstItem="J9j-tk-Km2" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="67" id="2Cm-1C-Pcc"/>
+                            <constraint firstItem="xKK-81-2yP" firstAttribute="centerX" secondItem="J9j-tk-Km2" secondAttribute="centerX" id="Hl2-98-oVi"/>
+                            <constraint firstItem="xKK-81-2yP" firstAttribute="top" secondItem="J9j-tk-Km2" secondAttribute="bottom" constant="15" id="LFZ-Eu-Syc"/>
+                            <constraint firstItem="xKK-81-2yP" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="65" id="SUp-84-G9t"/>
+                            <constraint firstItem="xKK-81-2yP" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="gPG-mY-RF4"/>
+                            <constraint firstItem="J9j-tk-Km2" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="193" id="vJu-TW-orQ"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="53" y="375"/>
+            <point key="canvasLocation" x="52" y="374.66266866566718"/>
         </scene>
     </scenes>
     <resources>
