--- a/Founders D&G/Base.lproj/Main.storyboard
+++ b/Founders D&G/Base.lproj/Main.storyboard
@@ -42,7 +42,7 @@
                                 <rect key="frame" x="67" y="481" width="241" height="60"/>
                                 <color key="backgroundColor" red="0.95294117647058818" green="0.61176470588235299" blue="0.2196078431372549" alpha="1" colorSpace="calibratedRGB"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="18"/>
-                                <state key="normal" title="Settings">
+                                <state key="normal" title="Siri Shortcuts">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <color key="titleShadowColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
@@ -77,7 +77,7 @@
                     <connections>
                         <outlet property="btnOpenFrontDoor" destination="nQB-bJ-KsP" id="chV-45-Jfk"/>
                         <outlet property="btnOpenGarageDoor" destination="opM-Lu-gpn" id="kFV-6M-bBb"/>
-                        <outlet property="btnSettings" destination="mqi-oh-75d" id="weM-Vg-RhI"/>
+                        <outlet property="btnSiriShortcuts" destination="mqi-oh-75d" id="uki-D7-X0I"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
